
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;
typedef int u_int ;
struct sockaddr_dl {int dummy; } ;


 int ETHER_ADDR_LEN ;
 int LLADDR (struct sockaddr_dl*) ;
 int bitrev32 (int) ;
 int ether_crc32_le (int ,int ) ;

__attribute__((used)) static u_int
awg_hash_maddr(void *arg, struct sockaddr_dl *sdl, u_int cnt)
{
 uint32_t crc, hashreg, hashbit, *hash = arg;

 crc = ether_crc32_le(LLADDR(sdl), ETHER_ADDR_LEN) & 0x7f;
 crc = bitrev32(~crc) >> 26;
 hashreg = (crc >> 5);
 hashbit = (crc & 0x1f);
 hash[hashreg] |= (1 << hashbit);

 return (1);
}
